--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
         run: npm run build
         working-directory: stitch_app
 
+      - name: Add .nojekyll file
+        run: touch stitch_app/dist/.nojekyll
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
